--- a/sass/components/_mixin.sass
+++ b/sass/components/_mixin.sass
@@ -1,5 +1,5 @@
 @mixin header
-    font-size: 5rem
+    font-size: 80px
     text-transform: uppercase
     display: inline-block
     margin-left: 80px
