--- a/sass/components/_portfolio.sass
+++ b/sass/components/_portfolio.sass
@@ -23,6 +23,7 @@
 
             .portfolio__item:nth-child(2)
                 grid-area: 2 / 2 / 7 / 3
+                margin-left: 20%
 
             .portfolio__item:nth-child(3)
                 grid-area: 4 / 1 / 8 / 2
