--- a/sass/main.sass
+++ b/sass/main.sass
@@ -26,6 +26,7 @@
 @import 'components/client'
 @import 'components/button'
 @import 'components/contacts'
+@import 'components/media'
 
 :root
   --bg_color:#DBDCDE
