--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,102 @@
   width: 100%;
   z-index: 10;
 }
+.nav__burger {
+  width: 50px;
+  height: 50px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+.nav__burger::before, .nav__burger::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 1px;
+  background-color: #fff;
+  margin: 6px 0;
+  border-radius: 10px;
+}
+.nav__burger span {
+  width: 30px;
+  height: 1px;
+  background-color: #fff;
+  display: block;
+  border-radius: 10px;
+}
+.nav__burger_menu {
+  position: fixed;
+  width: 0%;
+  height: 100vh;
+  right: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 20;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+  transition: 0.2s;
+}
+.nav__burger_menu ul {
+  text-align: center;
+  row-gap: 44px;
+  color: var(--main_color);
+  text-transform: uppercase;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+}
+.nav__burger_menu ul a {
+  text-decoration: none;
+  color: var(--main_color);
+  position: relative;
+}
+.nav__burger_menu ul a::after {
+  content: "";
+  display: block;
+  background-color: #fff;
+  margin-top: 8px;
+  height: 1px;
+  width: 0%;
+  transition: 0.2s;
+}
+.nav__burger_menu ul a li {
+  list-style-type: none;
+  margin: 20px 0;
+}
+.nav__burger_menu ul a:hover::after {
+  width: 100%;
+}
+.nav__burger_menu_active {
+  width: 50%;
+}
+.nav__burger_menu_close {
+  top: 20px;
+  left: 20px;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.nav__burger_menu_close::after, .nav__burger_menu_close::before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: #fff;
+}
+.nav__burger_menu_close::after {
+  transform: rotate(-45deg);
+}
+.nav__burger_menu_close::before {
+  transform: rotate(45deg) translate(1px, 1px);
+}
 .nav__opacity {
   width: 100%;
   height: 100%;
@@ -173,6 +269,7 @@
 }
 .portfolio-main .portfolio__content .portfolio__item:nth-child(2) {
   grid-area: 2/2/7/3;
+  margin-left: 20%;
 }
 .portfolio-main .portfolio__content .portfolio__item:nth-child(3) {
   grid-area: 4/1/8/2;
@@ -183,7 +280,7 @@
   margin-top: 15px;
 }
 .portfolio__header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -267,7 +364,7 @@
   z-index: 0;
 }
 .services__header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -301,7 +398,7 @@
   padding: 37px 0 0 30px;
 }
 .services__item_header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -403,7 +500,7 @@
   margin: 175px 0px;
 }
 .team__header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -449,6 +546,7 @@
 .team__item_descr {
   font-size: 16px;
   color: var(--second_color);
+  width: 90%;
 }
 
 .client {
@@ -456,7 +554,7 @@
   margin-bottom: 100px;
 }
 .client__header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -627,7 +725,7 @@
   background-color: #EB499C;
 }
 .contacts__header {
-  font-size: 5rem;
+  font-size: 80px;
   text-transform: uppercase;
   display: inline-block;
   margin-left: 80px;
@@ -649,6 +747,291 @@
   margin-bottom: 40px;
 }
 
+@media (max-width: 1399px) {
+  .services__item_header {
+    font-size: 20px;
+  }
+  .services__item_description {
+    width: 95%;
+    font-size: 16px;
+  }
+  .client__content {
+    margin-top: 50px;
+  }
+}
+@media (max-width: 1199px) {
+  .client__item {
+    width: 150px;
+    height: 150px;
+  }
+  .services__header, .portfolio__header, .team__header, .client__header, .contacts__header, .contacts__header {
+    font-size: 60px;
+  }
+  .contacts__descr {
+    font-size: 16px;
+  }
+  .portfolio__subheader, .portfolio__subheader {
+    font-size: 20px;
+  }
+  .team__content {
+    height: 600px;
+  }
+  .about__header {
+    font-size: 47px;
+    margin-left: 0;
+  }
+  .about__item {
+    margin-top: 20px;
+  }
+  .about__item_header {
+    font-size: 20px;
+  }
+  .team__subheader {
+    font-size: 20px;
+  }
+  .about__item_subheader {
+    font-size: 16px;
+  }
+  .about__pros {
+    margin-top: 40px;
+  }
+}
+@media (max-width: 991px) {
+  .nav__burger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .nav__ul {
+    display: none;
+  }
+  .portfolio-main .portfolio__content .portfolio__item:nth-child(2) {
+    margin-left: 10%;
+  }
+  .portfolio-main .portfolio__content .portfolio__item {
+    width: 90%;
+  }
+  .button__nofill {
+    width: 310px;
+    height: 60px;
+    font-size: 22px;
+  }
+  .services__header, .portfolio__header, .team__header, .client__header, .contacts__header, .contacts__header {
+    font-size: 55px;
+    margin-left: 0;
+  }
+  .portfolio__subheader, .team__subheader {
+    margin-left: 0;
+  }
+  .header .container h1 {
+    font-size: 170px;
+  }
+  .header .container h1 u {
+    font-size: 140px;
+  }
+  .header .container svg {
+    width: 700px;
+  }
+  .about__container {
+    display: block;
+  }
+  .about__hr {
+    display: none;
+  }
+  .about__item:nth-child(1) {
+    width: 100%;
+  }
+  .about__item {
+    width: 100%;
+  }
+  .about .container {
+    padding: 60px 70px;
+  }
+  .about__images {
+    gap: 40px;
+  }
+  .about__images img {
+    width: 35%;
+  }
+  .services__item {
+    width: calc(50% - 25px);
+  }
+  .button__nofill {
+    width: 360px;
+  }
+  .portfolio-main {
+    margin-top: 100px;
+  }
+  .team__content {
+    height: 420px;
+  }
+  .team__item_fullname {
+    font-size: 21px;
+  }
+  .team__item_descr {
+    font-size: 14px;
+  }
+  .client__content {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 40px;
+  }
+  .client__item {
+    width: 180px;
+    height: 180px;
+  }
+  .contacts .contacts__form .contacts__form_inputs {
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+  .contacts .contacts__form .contacts__form_inputs input {
+    width: 100%;
+  }
+  .contacts .contacts__form .contacts__form_bottom {
+    flex-direction: column;
+  }
+  .contacts .contacts__form {
+    padding: 30px;
+  }
+  .contacts__form {
+    width: 100%;
+  }
+  .contacts .contacts__form .contacts__form_bottom button {
+    width: 100%;
+  }
+  .contacts {
+    height: auto;
+    margin-bottom: 50px;
+    margin-top: 120px;
+  }
+  .contacts .contacts__form .contacts__form_rool {
+    width: 100%;
+    margin-top: 10px;
+  }
+  .contacts .contacts__form .contacts__form_rool .contacts__form_checkbox {
+    margin-left: 0;
+  }
+  .contacts__item .contacts__item p {
+    font-size: 17px;
+  }
+  .contacts__item .contacts__item {
+    width: 90%;
+  }
+}
+@media (max-width: 767px) {
+  .nav__burger_menu_active {
+    width: 65%;
+  }
+  .header .container svg {
+    width: 500px;
+  }
+  .header .container h1 {
+    font-size: 120px;
+    text-indent: 0;
+  }
+  .header .container h1 u {
+    font-size: 100px;
+  }
+  .about__images img:nth-child(2) {
+    display: none;
+  }
+  .about__images img {
+    width: 55%;
+  }
+  .about__images {
+    margin-top: 50px;
+  }
+  .about {
+    margin-bottom: 100px;
+  }
+  .services__item:nth-child(1), .services__item:nth-child(2), .services__item {
+    width: 100%;
+    height: 220px;
+  }
+  .portfolio-main .portfolio__content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .portfolio-main .portfolio__content .portfolio__item:nth-child(2) {
+    margin-left: 0;
+  }
+  .portfolio-main .portfolio__content .portfolio__item {
+    width: 80%;
+  }
+  .team__content {
+    height: auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .client__item {
+    width: 160px;
+    height: 160px;
+  }
+  .client__content {
+    row-gap: 20px;
+  }
+  .contacts .container {
+    flex-direction: column;
+  }
+  .contacts__item {
+    width: 100%;
+  }
+  .contacts .contacts__form {
+    width: 100%;
+  }
+}
+@media (max-width: 576px) {
+  .footer .container {
+    flex-direction: column;
+  }
+  .footer__block {
+    margin: 15px 0;
+  }
+  .contacts__item .contacts__item {
+    width: 100%;
+  }
+  .contacts .contacts__form .contacts__form_rool p {
+    font-size: 14px;
+  }
+  .client__item {
+    width: 140px;
+    height: 140px;
+  }
+  .services__header, .portfolio__header, .team__header, .client__header, .contacts__header, .contacts__header {
+    font-size: 40px;
+  }
+  .button__nofill {
+    width: 300px;
+  }
+  .portfolio__item {
+    font-size: 14px;
+  }
+  .services__item:nth-child(1), .services__item:nth-child(2), .services__item {
+    height: 200px;
+  }
+  .about .container {
+    padding: 30px 20px;
+  }
+  .about__images {
+    display: none;
+  }
+  .nav__burger_menu_active {
+    width: 100%;
+    background-color: #000;
+  }
+  .header .container svg {
+    width: 320px;
+  }
+  .header .container h1 {
+    font-size: 90px;
+  }
+  .header .container h1 u {
+    font-size: 60px;
+  }
+}
 :root {
   --bg_color:#DBDCDE;
   --main_color:#FFFFFF;
