--- a/sass/components/_nav.sass
+++ b/sass/components/_nav.sass
@@ -4,6 +4,103 @@
     width: 100%
     z-index: 10
 
+    &__burger
+        width: 50px
+        height: 50px
+        display: none
+        justify-content: center
+        align-items: center
+
+        &::before, &::after
+            content: ""
+            display: block
+            width: 30px
+            height: 1px
+            background-color: #fff
+            margin: 6px 0
+            border-radius: 10px
+
+        span
+            width: 30px
+            height: 1px
+            background-color: #fff
+            display: block
+            border-radius: 10px
+
+        &_menu
+            position: fixed
+            width: 0%
+            height: 100vh
+            right: 0
+            top: 0
+            background-color: rgba(0, 0, 0, 0.9)
+            z-index: 20
+            display: flex
+            justify-content: center
+            align-items: center
+            flex-direction: column
+            overflow: hidden
+            transition: 0.2s
+
+            ul
+                text-align: center
+                row-gap: 44px
+                color: var(--main_color)
+                text-transform: uppercase
+                font-size: 20px
+                margin: 0
+                padding: 0
+
+                a
+                    text-decoration: none
+                    color: var(--main_color)
+                    position: relative
+
+                    &::after
+                        content: ""
+                        display: block
+                        background-color: #fff
+                        margin-top: 8px
+                        height: 1px
+                        width: 0%
+                        transition: 0.2s
+
+                    li
+                        list-style-type: none
+                        margin: 20px 0
+
+                    &:hover
+                        &::after
+                            width: 100%
+
+            &_active
+                width: 50%
+
+            &_close
+                top: 20px
+                left: 20px
+                width: 40px
+                height: 40px
+                position: absolute
+                cursor: pointer
+                display: flex
+                justify-content: center
+                align-items: center
+                flex-direction: column 
+
+                &::after, &::before
+                    content: ""
+                    display: block
+                    width: 30px
+                    height: 2px
+                    background-color: #fff
+
+                &::after
+                    transform: rotate(-45deg)
+
+                &::before
+                    transform: rotate(45deg) translate(1px, 1px)
+
     &__opacity
         width: 100%
         height: 100%
