--- a/sass/components/_media.sass
+++ b/sass/components/_media.sass
@@ -230,6 +230,9 @@
     .contacts .contacts__form
         width: 100%
 
+    .team
+        margin: 100px 0
+
 @media (max-width: 576px) 
     .footer .container
         flex-direction: column
