--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,9 @@
 }
 .portfolio__item {
   width: 48%;
+  cursor: pointer;
+  text-decoration: none;
+  color: #000;
 }
 .portfolio__item img {
   width: 100%;
@@ -319,6 +322,7 @@
   font-weight: 500;
   display: inline-block;
   line-height: 1.5;
+  color: #000;
 }
 .portfolio__item p span {
   position: relative;
@@ -340,6 +344,59 @@
 .portfolio__item p span::after {
   transform: rotate(-45deg);
   bottom: 5.5px;
+}
+
+.portfolio-detail {
+  margin: 100px 0;
+}
+.portfolio-detail__header {
+  font-size: 80px;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-left: 80px;
+  margin-bottom: 0;
+  margin-left: 0;
+  font-size: 65px;
+}
+.portfolio-detail__item_container {
+  margin-top: 70px;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+.portfolio-detail__customer {
+  width: 30%;
+  background-color: #fff;
+  padding: 25px;
+  row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.portfolio-detail__customer div {
+  row-gap: 10px;
+}
+.portfolio-detail__customer div p:nth-child(2) {
+  text-transform: uppercase;
+  font-size: 22px;
+}
+.portfolio-detail__descr {
+  width: 50%;
+  line-height: 1.2;
+}
+.portfolio-detail__galery_header {
+  margin-top: 100px;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 900;
+}
+.portfolio-detail__galery {
+  margin-top: 55px;
+}
+.portfolio-detail__galery .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .services {
