--- a/sass/components/_portfolio.sass
+++ b/sass/components/_portfolio.sass
@@ -49,6 +49,9 @@
 
     &__item
         width: 48%
+        cursor: pointer
+        text-decoration: none
+        color: #000
 
         img
             width: 100%
@@ -64,6 +67,7 @@
             font-weight: 500
             display: inline-block
             line-height: 1.5
+            color: #000
 
             span
                 position: relative
@@ -86,4 +90,50 @@
                     transform: rotate(-45deg)
                     bottom: 5.5px
                 
+.portfolio-detail
+    margin: 100px 0
+    &__header
+        @include header
+        margin-left: 0
+        font-size: 65px
+
+    &__item_container
+        margin-top: 70px
+        display: flex
+        justify-content: center
+        gap: 100px
+
+    &__customer
+        width: 30%
+        background-color: #fff
+        padding: 25px
+        row-gap: 20px
+        display: flex
+        flex-direction: column
+
+        div
+            row-gap: 10px
+
+            p:nth-child(2)
+                text-transform: uppercase
+                font-size: 22px
+
+    &__descr
+        width: 50%
+        line-height: 1.2
+
+    &__galery_header
+        margin-top: 100px
+        text-transform: uppercase
+        font-size: 28px
+        font-weight: 900
+
+    &__galery
+        margin-top: 55px
         
+        .swiper-slide
+            img
+                width: 100%
+                height: 100%
+                object-fit: cover
+                object-position: center
