--- a/sass/components/_media.sass
+++ b/sass/components/_media.sass
@@ -45,9 +45,6 @@
     .about__pros
         margin-top: 40px
 
-    .portfolio__item img
-        width: 300px
-
     .portfolio__item p
         font-size: 14px
 
@@ -59,6 +56,21 @@
 
     .portfolio__content 
         margin-top: 30px
+
+    .portfolio-detail__galery
+        height: 195px
+
+    .portfolio-detail__header
+        font-size: 55px
+
+    .portfolio-detail__galery_header
+        font-size: 26px
+
+    .portfolio__item img
+        height: 330px
+
+    .portfolio-detail__customer div p:nth-child(2)
+        font-size: 20px
 
 @media (max-width: 991px)
     .nav__burger
@@ -185,6 +197,27 @@
     .portfolio__item img
         height: 220px
 
+    .portfolio-detail
+        margin: 50px 0
+
+    .portfolio-detail__customer
+        width: 50%
+        height: 220px
+    
+    .portfolio-detail__header
+        font-size: 50px
+
+    .portfolio-detail__customer div p:nth-child(2)
+        font-size: 18px
+
+    .portfolio-detail__item_container
+        flex-direction: column
+        gap: 50px
+
+    .portfolio-detail__descr
+        width: 100%
+    
+
 @media (max-width: 767px) 
     .nav__burger_menu_active
         width: 65%
@@ -261,6 +294,16 @@
         height: 330px
         width: 100%
 
+    .portfolio-detail__header
+        font-size: 40px
+
+    .portfolio-detail__customer
+        width: 100%
+        height: 200px
+
+    .portfolio-detail__galery
+        height: 330px
+
 @media (max-width: 576px) 
     .footer .container
         flex-direction: column
@@ -320,3 +363,25 @@
     
     .portfolio__item p span::before
         top: 3.5px
+
+    .portfolio-detail__header
+        font-size: 30px
+
+    .portfolio-detail__item_container
+        margin-top: 40px
+
+    .bread .container
+        font-size: 12px
+
+    .portfolio-detail__customer div p:nth-child(2)
+        font-size: 16px
+
+    .portfolio-detail__descr
+        font-size: 14px
+
+    .portfolio-detail__galery_header
+        font-size: 20px
+
+    .portfolio-detail__galery
+        margin-top: 30px
+        height: 245px
