--- a/sass/components/_portfolio.sass
+++ b/sass/components/_portfolio.sass
@@ -120,7 +120,7 @@
 
     &__descr
         width: 50%
-        line-height: 1.2
+        line-height: 1.4
 
     &__galery_header
         margin-top: 100px
@@ -129,6 +129,7 @@
         font-weight: 900
 
     &__galery
+        height: 250px
         margin-top: 55px
         
         .swiper-slide
@@ -136,4 +137,7 @@
                 width: 100%
                 height: 100%
                 object-fit: cover
-                object-position: center
+                object-position: top
+
+    &__customer
+        height: 250px
