--- a/sass/components/_media.sass
+++ b/sass/components/_media.sass
@@ -304,6 +304,10 @@
     .portfolio-detail__galery
         height: 330px
 
+    .nav__burger_menu ul
+        font-size: 12px
+        transform: translateY(-50px)
+
 @media (max-width: 576px) 
     .footer .container
         flex-direction: column
