--- a/sass/components/_nav.sass
+++ b/sass/components/_nav.sass
@@ -67,7 +67,7 @@
 
                     li
                         list-style-type: none
-                        margin: 20px 0
+                        margin: 25px 0
 
                     &:hover
                         &::after
@@ -147,3 +147,12 @@
             &:hover
                 &::after
                     width: 100%
+
+    &__portfolio
+        .nav__burger
+            width: 50px
+            height: 50px
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
