--- a/sass/components/_media.sass
+++ b/sass/components/_media.sass
@@ -24,7 +24,7 @@
         font-size: 20px
 
     .team__content
-        height: 600px
+        height: 750px
 
     .about__header
         font-size: 47px
@@ -140,7 +140,7 @@
         margin-top: 100px
 
     .team__content 
-        height: 420px
+        height: 566px
 
     .team__item_fullname
         font-size: 21px
@@ -218,6 +218,9 @@
 
     .portfolio-detail__descr
         width: 100%
+
+    .team__item_subdescr
+        font-size: 14px
     
 
 @media (max-width: 767px) 
@@ -313,6 +316,12 @@
     .nav__burger_menu ul
         font-size: 12px
         transform: translateY(-50px)
+
+    .team__item
+        width: 100%
+
+    .team__item_subdescr
+        height: 0
 
 @media (max-width: 576px) 
     .footer .container
